visit date field changed to correct format

--- a/data_cleaning/web_clean_nb.ipynb
+++ b/data_cleaning/web_clean_nb.ipynb
@@ -17,6 +17,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_99780/1231117421.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  web_df = pd.read_csv(web_path, parse_dates=[\"Visit Date\"])\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -53,7 +61,7 @@
        "      <th>0</th>\n",
        "      <td>11002649</td>\n",
        "      <td>4</td>\n",
-       "      <td>1-Jan-23</td>\n",
+       "      <td>2023-01-01</td>\n",
        "      <td>LinkedIn</td>\n",
        "      <td>Download</td>\n",
        "      <td>9</td>\n",
@@ -65,7 +73,7 @@
        "      <th>1</th>\n",
        "      <td>11002963</td>\n",
        "      <td>5</td>\n",
-       "      <td>1-Jan-23</td>\n",
+       "      <td>2023-01-01</td>\n",
        "      <td>Organic</td>\n",
        "      <td>Srcoll 50%</td>\n",
        "      <td>13</td>\n",
@@ -77,7 +85,7 @@
        "      <th>2</th>\n",
        "      <td>11000521</td>\n",
        "      <td>7</td>\n",
-       "      <td>1-Jan-23</td>\n",
+       "      <td>2023-01-01</td>\n",
        "      <td>Google</td>\n",
        "      <td>Srcoll 50%</td>\n",
        "      <td>3</td>\n",
@@ -89,7 +97,7 @@
        "      <th>3</th>\n",
        "      <td>11001502</td>\n",
        "      <td>5</td>\n",
-       "      <td>1-Jan-23</td>\n",
+       "      <td>2023-01-01</td>\n",
        "      <td>LinkedIn</td>\n",
        "      <td>Download</td>\n",
        "      <td>14</td>\n",
@@ -101,7 +109,7 @@
        "      <th>4</th>\n",
        "      <td>11001448</td>\n",
        "      <td>6</td>\n",
-       "      <td>1-Jan-23</td>\n",
+       "      <td>2023-01-01</td>\n",
        "      <td>Organic</td>\n",
        "      <td>Login</td>\n",
        "      <td>3</td>\n",
@@ -115,11 +123,11 @@
       ],
       "text/plain": [
        "   Session ID  Pageviews Visit Date Traffic Source     Actions  \\\n",
-       "0    11002649          4   1-Jan-23       LinkedIn    Download   \n",
-       "1    11002963          5   1-Jan-23        Organic  Srcoll 50%   \n",
-       "2    11000521          7   1-Jan-23         Google  Srcoll 50%   \n",
-       "3    11001502          5   1-Jan-23       LinkedIn    Download   \n",
-       "4    11001448          6   1-Jan-23        Organic       Login   \n",
+       "0    11002649          4 2023-01-01       LinkedIn    Download   \n",
+       "1    11002963          5 2023-01-01        Organic  Srcoll 50%   \n",
+       "2    11000521          7 2023-01-01         Google  Srcoll 50%   \n",
+       "3    11001502          5 2023-01-01       LinkedIn    Download   \n",
+       "4    11001448          6 2023-01-01        Organic       Login   \n",
        "\n",
        "   Time spent (in minutes) Page Title          Contact ID  Primary Topic  \n",
        "0                        9    Contact  00v2000000KM7EdAAL  Fund Universe  \n",
@@ -136,13 +144,25 @@
    ],
    "source": [
     "web_path = \"../data/Web_Traffic.csv\"\n",
-    "web_df = pd.read_csv(web_path)\n",
+    "web_df = pd.read_csv(web_path, parse_dates=[\"Visit Date\"])\n",
     "web_df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "efeac74f-5478-4847-9486-ff8ec9f619bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Visit Date cahnged to correct date format\n",
+    "\n",
+    "web_df[\"Visit Date\"] = web_df[\"Visit Date\"].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "8f38a0fd-6d98-4115-8faa-f37c8c4d477c",
    "metadata": {},
    "outputs": [
@@ -178,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ccafa624-537f-419b-a71b-56678c9d2cf8",
    "metadata": {},
    "outputs": [],
@@ -190,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "557ac384-8521-4d38-ae61-df927e1a5609",
    "metadata": {},
    "outputs": [
@@ -205,7 +225,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "794f6ff8-4d09-4943-8439-351f9c82f207",
    "metadata": {},
    "outputs": [
@@ -243,7 +263,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e2914ba1-7e19-4faf-b997-3a6e5720fca7",
    "metadata": {},
    "outputs": [],
@@ -277,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "962b2618-1f4e-479a-bbe1-5e4795d984a9",
    "metadata": {},
    "outputs": [
@@ -324,7 +344,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "7dd03340-2005-4537-aac7-7c55f346e85b",
    "metadata": {},
    "outputs": [],
@@ -347,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "228124be-66b1-47e1-8d2c-f64af3cd4738",
    "metadata": {},
    "outputs": [
@@ -364,7 +384,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f54804d1-696e-4b88-b438-066b7ed8fc3f",
    "metadata": {},
    "outputs": [
@@ -408,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "42ef429d-6f60-4862-955a-a3678adc89d3",
    "metadata": {},
    "outputs": [],
@@ -427,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "2b98f18c-79f1-474b-90c0-7a6a9208f0a1",
    "metadata": {},
    "outputs": [],
