--- a/exploratory_analysis/web_traffic.ipynb
+++ b/exploratory_analysis/web_traffic.ipynb
@@ -45,7 +45,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_15846/1231117421.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/tmp/ipykernel_97775/1231117421.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  web_df = pd.read_csv(web_path, parse_dates=[\"Visit Date\"])\n"
      ]
     },
@@ -737,9 +737,7 @@
   {
    "cell_type": "markdown",
    "id": "fb8ef3f7-ac79-4564-9c60-2a172a526026",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Primary Topic   / ; 4345 test\n",
     "\n",
@@ -1409,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "ec40152c-a1a9-4b41-8c30-f371e41a4d6c",
    "metadata": {},
    "outputs": [],
@@ -1420,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "8745ba54-241a-4164-9de8-46a5d450f909",
    "metadata": {},
    "outputs": [
@@ -1588,7 +1586,7 @@
        "[126 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1609,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "3767ba61-e78a-476a-9ad8-8c17c1dad484",
    "metadata": {},
    "outputs": [
@@ -1684,7 +1682,7 @@
        "327494                        7       Home  00v2000000KZAdeAAH           NaN  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1696,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "46fa5e1a-ac8c-4510-a620-797496ffe84e",
    "metadata": {},
    "outputs": [
@@ -1900,7 +1898,7 @@
        "[117 rows x 9 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1911,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "2ed0985e-822f-49aa-9caa-108f7c894485",
    "metadata": {},
    "outputs": [
@@ -2434,7 +2432,7 @@
        "423603                        2       Home  00v2000000KZAdeAAH            NaN  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2446,7 +2444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "ccf6c98f-37b8-4d55-92e5-ded8c650e30f",
    "metadata": {},
    "outputs": [
@@ -2468,7 +2466,7 @@
        "Name: count, Length: 421118, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2479,7 +2477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "dbfea64f-cc04-490a-bbef-efdb2f6a6341",
    "metadata": {},
    "outputs": [
@@ -2582,7 +2580,7 @@
        "318828                        7  Navigation  00v2000000MhkOZAAZ    Navigation  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2594,7 +2592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "1b1645b0-393e-4de1-83cc-3bfd14d3513e",
    "metadata": {},
    "outputs": [
@@ -2798,7 +2796,7 @@
        "[115 rows x 9 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2809,7 +2807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "1741ab8a-6d71-4071-8716-6e05b5131d24",
    "metadata": {},
    "outputs": [],
@@ -2819,7 +2817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "id": "b6f30a49-7370-482e-8fc1-18eb29e75fc1",
    "metadata": {},
    "outputs": [
@@ -2841,7 +2839,7 @@
        "Name: count, Length: 421118, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2852,7 +2850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "id": "78ca8792-d550-48a9-8388-a4830c47f22c",
    "metadata": {},
    "outputs": [
@@ -2874,7 +2872,7 @@
        "Name: Contact ID, Length: 421118, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2885,7 +2883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "id": "de0fa986-15a5-4516-baab-c25bc4009aca",
    "metadata": {},
    "outputs": [
@@ -3095,7 +3093,7 @@
        "407023  1100198600v2000000SJNPJAA5  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3108,7 +3106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 30,
    "id": "22348bfc-956b-4520-a005-62f01808b8a0",
    "metadata": {},
    "outputs": [
@@ -3130,7 +3128,7 @@
        "Name: count, Length: 7116, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3141,7 +3139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 31,
    "id": "9837e030-8973-4e36-a7b0-7128ab2f6976",
    "metadata": {},
    "outputs": [
@@ -3370,7 +3368,7 @@
        "[53507 rows x 10 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3381,7 +3379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 32,
    "id": "b3f22b33-e150-4bd8-9aac-63e360cff559",
    "metadata": {},
    "outputs": [
@@ -3391,7 +3389,7 @@
        "3294"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3402,7 +3400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
    "id": "62cd9b0b-80e1-42d2-aa9a-df63a9a300a0",
    "metadata": {},
    "outputs": [
@@ -3412,7 +3410,7 @@
        "3872"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3423,7 +3421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 34,
    "id": "489f4ae2-b1de-408c-b454-e730b7edb748",
    "metadata": {},
    "outputs": [
@@ -3433,7 +3431,7 @@
        "421118"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3444,7 +3442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 35,
    "id": "a002398f-9f4e-452b-af5c-0fa13f778d04",
    "metadata": {},
    "outputs": [
@@ -3466,7 +3464,7 @@
        "Name: Contact ID, Length: 3294, dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3477,7 +3475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 36,
    "id": "25c29042-d96d-4831-af52-cbb08f21d9c4",
    "metadata": {},
    "outputs": [
@@ -3499,7 +3497,7 @@
        "Name: count, Length: 7116, dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3513,6 +3511,165 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d80edaad-9d4a-4cdb-b442-76934ed4665a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "c49a697a-8ed4-49f7-8227-87e639c8bdea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "web_df[\"Visit Date\"] = web_df[\"Visit Date\"].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f52f5e6f-5e82-48b5-b356-f2709ec8789d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Session ID</th>\n",
+       "      <th>Pageviews</th>\n",
+       "      <th>Visit Date</th>\n",
+       "      <th>Traffic Source</th>\n",
+       "      <th>Actions</th>\n",
+       "      <th>Time spent (in minutes)</th>\n",
+       "      <th>Page Title</th>\n",
+       "      <th>Contact ID</th>\n",
+       "      <th>Primary Topic</th>\n",
+       "      <th>unique_session_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11002649</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>LinkedIn</td>\n",
+       "      <td>Download</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Contact</td>\n",
+       "      <td>00v2000000KM7EdAAL</td>\n",
+       "      <td>Fund Universe</td>\n",
+       "      <td>1100264900v2000000KM7EdAAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11002963</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>Organic</td>\n",
+       "      <td>Srcoll 50%</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Contact</td>\n",
+       "      <td>00v2000000KLfqsAAD</td>\n",
+       "      <td>Fund Universe</td>\n",
+       "      <td>1100296300v2000000KLfqsAAD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11000521</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>Google</td>\n",
+       "      <td>Srcoll 50%</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>00v2000000KO68GAAT</td>\n",
+       "      <td>Fund Universe</td>\n",
+       "      <td>1100052100v2000000KO68GAAT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11001502</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>LinkedIn</td>\n",
+       "      <td>Download</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Contact</td>\n",
+       "      <td>00v2000000KrZiaAAF</td>\n",
+       "      <td>Fund Universe</td>\n",
+       "      <td>1100150200v2000000KrZiaAAF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11001448</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>Organic</td>\n",
+       "      <td>Login</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>00v2000000ez1ucAAA</td>\n",
+       "      <td>Fund Universe</td>\n",
+       "      <td>1100144800v2000000ez1ucAAA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Session ID  Pageviews  Visit Date Traffic Source     Actions  \\\n",
+       "0    11002649          4  2023-01-01       LinkedIn    Download   \n",
+       "1    11002963          5  2023-01-01        Organic  Srcoll 50%   \n",
+       "2    11000521          7  2023-01-01         Google  Srcoll 50%   \n",
+       "3    11001502          5  2023-01-01       LinkedIn    Download   \n",
+       "4    11001448          6  2023-01-01        Organic       Login   \n",
+       "\n",
+       "   Time spent (in minutes) Page Title          Contact ID  Primary Topic  \\\n",
+       "0                        9    Contact  00v2000000KM7EdAAL  Fund Universe   \n",
+       "1                       13    Contact  00v2000000KLfqsAAD  Fund Universe   \n",
+       "2                        3       Home  00v2000000KO68GAAT  Fund Universe   \n",
+       "3                       14    Contact  00v2000000KrZiaAAF  Fund Universe   \n",
+       "4                        3       Home  00v2000000ez1ucAAA  Fund Universe   \n",
+       "\n",
+       "            unique_session_id  \n",
+       "0  1100264900v2000000KM7EdAAL  \n",
+       "1  1100296300v2000000KLfqsAAD  \n",
+       "2  1100052100v2000000KO68GAAT  \n",
+       "3  1100150200v2000000KrZiaAAF  \n",
+       "4  1100144800v2000000ez1ucAAA  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "web_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "688f3af6-871b-4d59-b482-aa7953e0d2a4",
    "metadata": {},
    "outputs": [],
    "source": []
