new cleaning process

--- a/data_cleaning/email_clean_nb.ipynb
+++ b/data_cleaning/email_clean_nb.ipynb
@@ -309,11 +309,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Convert all the NULLs in Primary Topic to \"Undefined\"\n",
-    "\n",
-    "email_df[\"Primary Topic\"] = email_df[\"Primary Topic\"].fillna(\"Undefined\")\n",
-    "\n",
     "## Fix spelling error in the Primary Topic column\n",
+    "\n",
     "topic_map = {\n",
     "    \"Ad hoc\": \"Adhoc\",\n",
     "    \"Asssets\": \"Asset\",\n",
@@ -322,7 +319,14 @@
     "}\n",
     "\n",
     "email_df[\"Primary Topic\"] = email_df[\"Primary Topic\"] \\\n",
-    "    .map(lambda x: x if x not in topic_map.keys() else topic_map[x])"
+    "    .map(lambda x: x if x not in topic_map.keys() else topic_map[x])\n",
+    "\n",
+    "## Fix some of the NULL Primary Topics\n",
+    "\n",
+    "\n",
+    "## Convert all the NULLs in Primary Topic to \"Undefined\"\n",
+    "\n",
+    "email_df[\"Primary Topic\"] = email_df[\"Primary Topic\"].fillna(\"Undefined\")\n"
    ]
   },
   {
