--- a/data_cleaning/web_clean_nb.ipynb
+++ b/data_cleaning/web_clean_nb.ipynb
@@ -20,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_99780/1231117421.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/tmp/ipykernel_12474/1231117421.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  web_df = pd.read_csv(web_path, parse_dates=[\"Visit Date\"])\n"
      ]
     },
@@ -222,6 +222,7 @@
        "Organic      95363\n",
        "YouTube      92733\n",
        "Google       60922\n",
+       "Unknown        158\n",
        "Name: count, dtype: int64"
       ]
      },
@@ -232,6 +233,9 @@
    ],
    "source": [
     "## correct Traffic Source column\n",
+    "## fill null values of Traffic Source column\n",
+    "\n",
+    "web_df[\"Traffic Source\"] = web_df[\"Traffic Source\"].fillna(\"Unknown\")\n",
     "\n",
     "traffic_source_map = {\n",
     "    \"organic\": \"Organic\",\n",
@@ -247,6 +251,33 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "f7fd2c05-bcb6-4f9a-a155-18dd46f52705",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Traffic Source\n",
+       "LinkedIn    179156\n",
+       "Organic      95363\n",
+       "YouTube      92733\n",
+       "Google       60922\n",
+       "Unknown        158\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "web_df[\"Traffic Source\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "794f6ff8-4d09-4943-8439-351f9c82f207",
    "metadata": {},
    "outputs": [
@@ -263,7 +294,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e2914ba1-7e19-4faf-b997-3a6e5720fca7",
    "metadata": {},
    "outputs": [],
@@ -297,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "962b2618-1f4e-479a-bbe1-5e4795d984a9",
    "metadata": {},
    "outputs": [
@@ -344,7 +375,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7dd03340-2005-4537-aac7-7c55f346e85b",
    "metadata": {},
    "outputs": [],
@@ -367,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "228124be-66b1-47e1-8d2c-f64af3cd4738",
    "metadata": {},
    "outputs": [
@@ -384,7 +415,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f54804d1-696e-4b88-b438-066b7ed8fc3f",
    "metadata": {},
    "outputs": [
@@ -411,7 +442,7 @@
       " 0   Session ID               428331 non-null  object\n",
       " 1   Pageviews                428331 non-null  int64 \n",
       " 2   Visit Date               428331 non-null  object\n",
-      " 3   Traffic Source           428173 non-null  object\n",
+      " 3   Traffic Source           428331 non-null  object\n",
       " 4   Actions                  428331 non-null  object\n",
       " 5   Time spent (in minutes)  428331 non-null  int64 \n",
       " 6   Page Title               428331 non-null  object\n",
@@ -428,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "42ef429d-6f60-4862-955a-a3678adc89d3",
    "metadata": {},
    "outputs": [],
@@ -447,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "2b98f18c-79f1-474b-90c0-7a6a9208f0a1",
    "metadata": {},
    "outputs": [],
